--- a/frontend/src/components/MasterclassCard/MasterclassCard.module.scss
+++ b/frontend/src/components/MasterclassCard/MasterclassCard.module.scss
@@ -7,7 +7,7 @@
     align-items: flex-start; 
     gap: 32px; 
     width: 100%;
-    max-width: 730px;
+    width: 730px;
 }
 
 .flexContainerWithLine {
@@ -239,4 +239,17 @@
     margin-bottom: 20px;
     width: 297px;
   }
+}
+
+@media screen and (min-width: 360px) and (max-width: global.$breakpoint-ipad-mini) {
+  .flexContainer {
+    max-width: 320px;
+  }  
+
+  .description {
+    max-width: 164px;
+    height: 66px;
+    font-size: 16px;
+  }
+
 }
